apps/adguard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
  hostnames:
    - adguard.home.alden.ai
  rules:
  - backendRefs:
    - name: adguard
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
