apps/adguard/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: adguard
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard
      app.kubernetes.io/instance: adguard
  action: 'CUSTOM'
  provider:
    name: 'authelia'
  rules:
    - to:
        - operation:
            hosts:
              - 'adguard.home.alden.ai'
